# x16BDstacks

./: .gitignore  BUILD_REPORT.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEPENDENCIES.md  GITHUB_SETUP.md  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md  RELEASE_v0.2.0.md  SECURITY.md  UPDATE_COMPLETE.md  fix_headers.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: nexus-config.yaml
docs/: ARCHITECTURE.md
src/: application.cpp  application.h  main.cpp  qt_stubs.h
src/ai/: ai_core.cpp  ai_core.h  cnn_upscaler.cpp  cnn_upscaler.h  frame_generator.cpp  frame_generator.h  inference_engine.cpp  inference_engine.h  texture_enhancer.cpp  texture_enhancer.h
src/core/: android_system.cpp  android_system.h  emulator.cpp  emulator.h  hypervisor.cpp  hypervisor.h  qemu_wrapper.cpp  qemu_wrapper.h
src/input/: input_handler.cpp  input_handler.h
src/memory/: intelligent_paging.cpp  intelligent_paging.h  memory_manager.cpp  memory_manager.h  process_analyzer.cpp  process_analyzer.h
src/shader/: aot_compiler.cpp  aot_compiler.h  jit_compiler.cpp  jit_compiler.h  predictive_cache.cpp  predictive_cache.h  shader_cache.cpp  shader_cache.h
src/ui/: gesture_handler.cpp  gesture_handler.h  glassmorphism_renderer.cpp  glassmorphism_renderer.h  metrics_display.cpp  metrics_display.h  overlay_window.cpp  overlay_window.h  voice_controller.cpp  voice_controller.h
tests/: test_ai_core.cpp  test_input_handler.cpp  test_main.cpp  test_memory_manager.cpp  test_shader_cache.cpp
